# CoreBankingMicroservices-CleanArch-2

./: README.md
api-gateway/: README.md  (+1 more)
pix-microservice/: .env  Cargo.toml  Dockerfile  Readme.md  config.rs  docker-compose.yml
pix-microservice/config/: default.toml
pix-microservice/grafana-config/: grafana.ini
pix-microservice/src/: main.rs
pix-microservice/src/application/: mod.rs
pix-microservice/src/application/services/: mod.rs  payment_service.rs  qr_code_service.rs
pix-microservice/src/application/usecase/: mod.rs  process_payment_usecase.rs
pix-microservice/src/config/: mod.rs
pix-microservice/src/domain/: mod.rs
pix-microservice/src/domain/entities/: mod.rs  pix_payment.rs
pix-microservice/src/domain/events/: mod.rs  pix_payment_event.rs
pix-microservice/src/domain/repositories/: mod.rs  pix_repository.rs
pix-microservice/src/infrastructure/: mod.rs
pix-microservice/src/infrastructure/cache/: redis_client.rs
pix-microservice/src/infrastructure/config/: mod.rs  settings.rs
pix-microservice/src/infrastructure/db/: dynamodb_connection.rs  dynamodb_repository.rs  mod.rs
pix-microservice/src/infrastructure/logging/: grafana_logger.rs  mod.rs
pix-microservice/src/infrastructure/messaging/: mod.rs  rabbitmq_client.rs
pix-microservice/src/infrastructure/monitoring/: prometheus_metrics.rs
pix-microservice/src/interfaces/: mod.rs
pix-microservice/src/interfaces/controllers/: mod.rs  pix_controller.rs
pix-microservice/src/interfaces/event_handlers/: mod.rs  pix_event_handler.rs
pix-microservice/src/interfaces/http/: routes.rs
(+52 files in other folders)
